force-app/main/default/objects/Activity/fields/Action_URL__c.field-meta.xml
<CustomField>
    <fullName>Action_URL__c</fullName>
    <label>Action URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>