force-app/main/default/objects/Activity/fields/Activity_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Activity_Datetime__c</fullName>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>