force-app/main/default/objects/Activity/fields/Community_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Community_Template_Name__c</fullName>
    <label>Community Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>