force-app/main/default/objects/Activity/fields/CronTriggerId__c.field-meta.xml
<CustomField>
    <fullName>CronTriggerId__c</fullName>
    <label>CronTriggerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>