force-app/main/default/objects/Activity/fields/CronTriggerIdExpired__c.field-meta.xml
<CustomField>
    <fullName>CronTriggerIdExpired__c</fullName>
    <label>ExpiredCronTriggerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>