force-app/main/default/objects/Activity/fields/Ecoa_Task_Configuration_del__c.field-meta.xml
<CustomField>
    <fullName>Ecoa_Task_Configuration_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ecoa Task Configuration</label>
    <referenceTo>Ecoa_Task_Configuration__c</referenceTo>
    <relationshipLabel>Task</relationshipLabel>
    <relationshipName>Task_del</relationshipName>
    <type>Lookup</type>
</CustomField>