force-app/main/default/objects/Activity/fields/InitialTaskNotification__c.field-meta.xml
<CustomField>
    <fullName>InitialTaskNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>sends the initial notification when it is checked while record insertion.</description>
    <label>InitialTaskNotification</label>
    <type>Checkbox</type>
</CustomField>