force-app/main/default/objects/Activity/fields/Is_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Is_Reminder_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set his to TRUE after send email</description>
    <label>Is Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>