force-app/main/default/objects/Activity/fields/isPlatformLevelTask__c.field-meta.xml
<CustomField>
    <fullName>isPlatformLevelTask__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created on task creation to filter task for study level and platform level on Task Panel.</description>
    <label>isPlatformLevelTask</label>
    <type>Checkbox</type>
</CustomField>