force-app/main/default/objects/Activity/fields/IsRecurranceTask__c.field-meta.xml
<CustomField>
    <fullName>IsRecurranceTask__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To identify the task created from Manual Creational Panel</description>
    <label>IsRecurranceTask</label>
    <type>Checkbox</type>
</CustomField>