force-app/main/default/objects/Activity/fields/Originator__c.field-meta.xml
<CustomField>
    <fullName>Originator__c</fullName>
    <label>Originator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IQVIA Admin</fullName>
                <default>true</default>
                <label>IQVIA Admin</label>
            </value>
            <value>
                <fullName>Partcipant</fullName>
            </value>
            <value>
                <fullName>Delegate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>