force-app/main/default/objects/Activity/fields/Owner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Owner_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Define owner contact in this field if user not exist. After user creation task will be auto assigned to this user</description>
    <label>Owner Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>