force-app/main/default/objects/Activity/fields/Participant_Enrollment_Id__c.field-meta.xml
<CustomField>
    <fullName>Participant_Enrollment_Id__c</fullName>
    <label>Participant Enrollment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>