force-app/main/default/objects/Activity/fields/Patient_Visit__c.field-meta.xml
<CustomField>
    <fullName>Patient_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Visit</label>
    <referenceTo>Patient_Visit__c</referenceTo>
    <relationshipLabel>Reminders</relationshipLabel>
    <relationshipName>Reminders</relationshipName>
    <type>Lookup</type>
</CustomField>