force-app/main/default/objects/Activity/fields/Remind_Me__c.field-meta.xml
<CustomField>
    <fullName>Remind_Me__c</fullName>
    <label>Remind Me</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete By</fullName>
            </value>
            <value>
                <fullName>1 day before</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>