force-app/main/default/objects/Activity/fields/Remind_Using_Email__c.field-meta.xml
<CustomField>
    <fullName>Remind_Using_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remind Using Email</label>
    <type>Checkbox</type>
</CustomField>