force-app/main/default/objects/Activity/fields/Task_Code__c.field-meta.xml
<CustomField>
    <fullName>Task_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Task Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>