force-app/main/default/objects/Activity/fields/Visible_For__c.field-meta.xml
<CustomField>
    <fullName>Visible_For__c</fullName>
    <label>Visible For</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Delegates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>